--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <!-- Socket.IO client for online multiplayer -->
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script type="module" src="src/main.js"></script>
 </body>
 
