feat: new assets

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stick Fighting Arena</title>
     <meta name="description" content="An epic pixel art stick fighting game with local and online multiplayer">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -41,6 +44,9 @@
                     <div class="health-bar" id="health-p1"></div>
                 </div>
                 <div class="weapon-display" id="weapon-p1">⚔️ SWORD</div>
+                <div class="item-slots" id="items-p1">
+                    <!-- Javascript will populate this -->
+                </div>
             </div>
             <div class="score-display">
                 <div id="score-p1">0</div>
@@ -53,6 +59,9 @@
                     <div class="health-bar" id="health-p2"></div>
                 </div>
                 <div class="weapon-display" id="weapon-p2">⚔️ SWORD</div>
+                <div class="item-slots" id="items-p2">
+                    <!-- Javascript will populate this -->
+                </div>
             </div>
         </div>
 
